--- a/settings.js.dist
+++ b/settings.js.dist
@@ -3,6 +3,7 @@ var settings = {};
 settings.numLEDs = 32;
 settings.stripeType = "LPD8806"; // choose between "LPD8806" and "WS2801"
 settings.spiDevice = "/dev/spidev0.0";
+settings.reverseOrder = false;
 
 settings.jenkinsHost = "www.yourCiServer.com";
 settings.jenkinsPath = "/view/All/api/json";
