--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "ledstripe": "0.0.2",
-    "pngparse": "~2.0.1"
+    "pngparse": "~2.0.1",
+    "request": "~2.28.0"
   }
 }
