--- a/settings.js.dist
+++ b/settings.js.dist
@@ -14,7 +14,7 @@ settings.jenkinsAuth = {
 settings.jenkinsInterval = 60; // time in seconds between getting new status from jenkins
 
 settings.colors = {
-    blue : [0x00, 0xFF, 0x00], // is use green color for a good build
+    blue : [0x00, 0xFF, 0x00], // i use green instead of blue color for a good build
     blue_anime : [0x00, 0x55, 0x00],
     red : [0xFF, 0x00, 0x00],
     red_anime : [0x55, 0x00, 0x00],
