--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "ledstripe": "0.0.2",
     "pngparse": "~2.0.1",
-    "request": "~2.28.0"
+    "request": "~2.28.0",
+    "socket.io": "~0.9.16"
   }
 }
